Test edit for Github

--- a/html/home_en_US.html
+++ b/html/home_en_US.html
@@ -4,6 +4,8 @@
         <md-card class="default-card">
             <md-card-title>
                 <md-card-title-text>
+				<!--TEST EDIT FOR GITHUB -->
+				
                <!-- <span class="md-headline">Help and Other Resources</span>
                 </md-card-title-text>
             </md-card-title>
